--- a/facebook demo.html
+++ b/facebook demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fake facebook page</title>
+    <title>fake facebook page2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <link rel="stylesheet" href="./facebook.css">
@@ -20,7 +20,7 @@
 </label>
 </div>
 <div class="all_right">
-    <a href="about me.html"><div class="name"><img src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.0-1/p240x240/109931079_584542632245395_5732389722429551128_n.jpg?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=vAzLHcASX9gAX9XMXw6&_nc_ht=scontent.fhan5-3.fna&_nc_tp=6&oh=61d83295e7f98ae8f18b77b0f0e5b6e4&oe=5F5959C2"><h3>Duyet</h3></div></a>
+    <a href="about me.html"><div class="name"><img src="https://avatars1.githubusercontent.com/u/69998574?s=460&u=8cee80c25c1a178edaf0bf718c52a13a8f5e19b4&v=4"><h3>Duyet</h3></div></a>
 
 <div class="main_page"><h3>Trang Chủ </h3></div>
 
@@ -82,7 +82,7 @@
 <div class="left">
 <div class="wrap_ul">
     <ul>
-        <a href="about me.html"><li><img src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.0-1/p240x240/109931079_584542632245395_5732389722429551128_n.jpg?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=vAzLHcASX9gAX9XMXw6&_nc_ht=scontent.fhan5-3.fna&_nc_tp=6&oh=61d83295e7f98ae8f18b77b0f0e5b6e4&oe=5F5959C2">Dinh Si Duyet</li></a>
+        <a href="about me.html"><li><img src="https://avatars1.githubusercontent.com/u/69998574?s=460&u=8cee80c25c1a178edaf0bf718c52a13a8f5e19b4&v=4">Dinh Si Duyet</li></a>
         <li><img src="https://static.xx.fbcdn.net/rsrc.php/v3/yI/r/WcCzeboYevF.png">Bảng tin </li>
         <li><img src="https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/kQ3g3UYcS_k.png"> Mesenger </li>
         <li><img src="https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/A1HlI2LVo58.png">Watch </li>
@@ -96,7 +96,7 @@
    <div class="overflow">
     <div class="content1"> <h3>Tạo bài viết</h3>
         <div class="content1_item">
-            <div class="fist_think"><img src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.0-1/p240x240/109931079_584542632245395_5732389722429551128_n.jpg?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=vAzLHcASX9gAX9XMXw6&_nc_ht=scontent.fhan5-3.fna&_nc_tp=6&oh=61d83295e7f98ae8f18b77b0f0e5b6e4&oe=5F5959C2">
+            <div class="fist_think"><img src="https://avatars1.githubusercontent.com/u/69998574?s=460&u=8cee80c25c1a178edaf0bf718c52a13a8f5e19b4&v=4">
         <input type="text"placeholder="Duyệt ơi Bạn đang nghĩ gì vậy ?">
         </div>
         </div>
@@ -131,7 +131,7 @@
   <div class="post_cover-item">
       <div class="item1">
           <div class="item1_small-img">
-            <img src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.0-1/p240x240/109931079_584542632245395_5732389722429551128_n.jpg?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=vAzLHcASX9gAX9XMXw6&_nc_ht=scontent.fhan5-3.fna&_nc_tp=6&oh=61d83295e7f98ae8f18b77b0f0e5b6e4&oe=5F5959C2">
+            <img src="https://avatars1.githubusercontent.com/u/69998574?s=460&u=8cee80c25c1a178edaf0bf718c52a13a8f5e19b4&v=4">
           </div>
         <img class="tin" src="https://i.pinimg.com/736x/60/30/47/6030477466abf908d8479f0e735a453d.jpg">
         </div>
